done scrolling text

--- a/frontend/public/homepage/index.html
+++ b/frontend/public/homepage/index.html
@@ -13,6 +13,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Old+Standard+TT&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@glidejs/glide/dist/css/glide.core.min.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@glidejs/glide/dist/css/glide.theme.min.css">
+<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 
 <!-- Include the Glide.js JavaScript file -->
 <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
@@ -72,7 +74,35 @@
     <button class="glide__bullet" data-glide-dir="=3"></button>
         </div>
     </div>
-    
+
+    <div class="marquee">
+        <ul class="marquee__content">
+          <li> SG delivery from 5 working days</li>
+          <li><ion-icon name="ellipse"></ion-icon></li>
+          <li>high stock levels</li>
+          <li><ion-icon name="ellipse"></ion-icon></li>
+          <li>established 2023</li>
+          <li><ion-icon name="ellipse"></ion-icon></li>
+          <li>15 SG showrooms</li>
+          <li><ion-icon name="ellipse"></ion-icon></li>
+          <li>design and technical advice</li>
+          <li><ion-icon name="ellipse"></ion-icon></li>
+        </ul>
+        <!-- Mirrors the content above -->
+        <ul class="marquee__content" aria-hidden="true">
+            <li> SG delivery from 5 working days</li>
+          <li><ion-icon name="ellipse"></ion-icon></li>
+          <li>high stock levels</li>
+          <li><ion-icon name="ellipse"></ion-icon></li>
+          <li>established 2023</li>
+          <li><ion-icon name="ellipse"></ion-icon></li>
+          <li>15 SG showrooms</li>
+          <li><ion-icon name="ellipse"></ion-icon></li>
+          <li>design and technical advice</li>
+          <li><ion-icon name="ellipse"></ion-icon></li>
+        </ul>
+      </div>
+
 <script type="module" src="main.js"></script>
 </body>
 
