homepage ALMOST done

--- a/frontend/public/homepage/index.html
+++ b/frontend/public/homepage/index.html
@@ -11,13 +11,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Old+Standard+TT&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@glidejs/glide/dist/css/glide.core.min.css">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@glidejs/glide/dist/css/glide.theme.min.css">
-<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@glidejs/glide/dist/css/glide.theme.min.css">
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 
-<!-- Include the Glide.js JavaScript file -->
-<script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
+    <!-- Include the Glide.js JavaScript file -->
+    <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@glidejs/glide/dist/css/glide.theme.min.css">
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
@@ -32,10 +33,18 @@
         <div class="navbar">
             <div class="left nav-item">
                 <ul class="horizontal-list ">
-                    <li><a href="#"><p>Living</p></a></li>
-                    <li><a href="#"><p>Bedroom</p></a></li>
-                    <li><a href="#"><p>Dining</p></a></li>
-                    <li><a href="#"><p>Outdoors</p></a></li>
+                    <li><a href="#">
+                            <p>Living</p>
+                        </a></li>
+                    <li><a href="#">
+                            <p>Bedroom</p>
+                        </a></li>
+                    <li><a href="#">
+                            <p>Dining</p>
+                        </a></li>
+                    <li><a href="#">
+                            <p>Outdoors</p>
+                        </a></li>
                 </ul>
             </div>
             <div class="middle nav-item">
@@ -97,56 +106,90 @@
 
     <div class="marquee">
         <ul class="marquee__content">
-          <li> SG delivery from 5 working days</li>
-          <li><ion-icon name="ellipse"></ion-icon></li>
-          <li>high stock levels</li>
-          <li><ion-icon name="ellipse"></ion-icon></li>
-          <li>established 2023</li>
-          <li><ion-icon name="ellipse"></ion-icon></li>
-          <li>15 SG showrooms</li>
-          <li><ion-icon name="ellipse"></ion-icon></li>
-          <li>design and technical advice</li>
-          <li><ion-icon name="ellipse"></ion-icon></li>
+            <li> SG delivery from 5 working days</li>
+            <li><ion-icon name="ellipse"></ion-icon></li>
+            <li>high stock levels</li>
+            <li><ion-icon name="ellipse"></ion-icon></li>
+            <li>established 2023</li>
+            <li><ion-icon name="ellipse"></ion-icon></li>
+            <li>15 SG showrooms</li>
+            <li><ion-icon name="ellipse"></ion-icon></li>
+            <li>design and technical advice</li>
+            <li><ion-icon name="ellipse"></ion-icon></li>
         </ul>
         <!-- Mirrors the content above -->
         <ul class="marquee__content" aria-hidden="true">
             <li> SG delivery from 5 working days</li>
-          <li><ion-icon name="ellipse"></ion-icon></li>
-          <li>high stock levels</li>
-          <li><ion-icon name="ellipse"></ion-icon></li>
-          <li>established 2023</li>
-          <li><ion-icon name="ellipse"></ion-icon></li>
-          <li>15 SG showrooms</li>
-          <li><ion-icon name="ellipse"></ion-icon></li>
-          <li>design and technical advice</li>
-          <li><ion-icon name="ellipse"></ion-icon></li>
+            <li><ion-icon name="ellipse"></ion-icon></li>
+            <li>high stock levels</li>
+            <li><ion-icon name="ellipse"></ion-icon></li>
+            <li>established 2023</li>
+            <li><ion-icon name="ellipse"></ion-icon></li>
+            <li>15 SG showrooms</li>
+            <li><ion-icon name="ellipse"></ion-icon></li>
+            <li>design and technical advice</li>
+            <li><ion-icon name="ellipse"></ion-icon></li>
         </ul>
-      </div>
+    </div>
 
-<script type="module" src="main.js"></script>
+    <script type="module" src="main.js"></script>
     <section class="catLinks">
 
-        <a href="#">
-            <div class="allProd">
-                <img src="../img/allProduct.jpg" class="allProdImg">
-                <div class="text">
-                    <p>Discover All We Have To Offer</p>
-                    <h1>Shop All Collections</h1>
-                </div>
-                <div class="shopBtn">
-                    <p>Shop Now</p>
-                </div>
+        <a href="#" class="allProd">
+
+            <img src="../img/allProduct.jpg" class="allProdImg">
+            <div class="text">
+                <p>Discover All We Have To Offer</p>
+                <h1>Shop All Collections</h1>
+            </div>
+            <div class="shopBtn">
+                <h3>Shop Now</h3>
             </div>
         </a>
 
+        <a href="#" class="topLeft">
+            <img src="../img/bedroom.jpg" class="topLeftImg">
+            <div class="text">
+                <p>Bedroom Essentials</p>
+                <h1>Bedroom</h1>
+            </div>
+            <div class="shopBtn">
+                <h3>Shop Now</h3>
+            </div>
+        </a>
 
-        <div class="topLeft">
+        <a href="#" class="topRight">
+            <img src="../img/dining.jpg" class="topRightImg">
+            <div class="text">
+                <p>Spice up your Dining Room</p>
+                <h1>Dining Room</h1>
+            </div>
+            <div class="shopBtn">
+                <h3>Shop Now</h3>
+            </div>
+        </a>
 
-        </div>
+        <a href="#" class="bottomLeft">
+            <img src="../img/outdoor.jpg" class="topRightImg">
+            <div class="text">
+                <p>Embrace Nature</p>
+                <h1>Outdoors</h1>
+            </div>
+            <div class="shopBtn">
+                <h3>Shop Now</h3>
+            </div>
+        </a>
 
-        <div class="topRight">
-
-        </div>
+        <a href="#" class="bottomRight">
+            <img src="../img/living.jpg" class="topRightImg">
+            <div class="text">
+                <p>Relax and Unwind</p>
+                <h1>Living Room</h1>
+            </div>
+            <div class="shopBtn">
+                <h3>Shop Now</h3>
+            </div>
+        </a>
 
 
     </section>
