done dynamic carousel

--- a/frontend/public/homepage/index.html
+++ b/frontend/public/homepage/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@glidejs/glide/dist/css/glide.theme.min.css">
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
     <!-- Include the Glide.js JavaScript file -->
     <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
@@ -68,27 +69,27 @@
             <ul class="glide__slides">
                 <li class="glide__slide" id="slide1">
                     <div class="desc">
-                        <h1 class="titleOfProduct">Maple Sage Green Couch</h1>
-                        <h3 class="prodDesc">4-person couch in sage green. Maple Wood legs and frame</h3>
+                        <h1 class="titleOfProduct"></h1>
+                        <h3 class="prodDesc"></h3>
                     </div>
                 </li>
                 <li class="glide__slide" id="slide2">
                     <div class="desc">
-                        <h1 class="titleOfProduct">Maple Sage Green Couch</h1>
-                        <h3 class="prodDesc">4-person couch in sage green. Maple Wood legs and frame</h3>
+                        <h1 class="titleOfProduct" id ="title"></h1>
+                        <h3 class="prodDesc"></h3>
                     </div>
                 </li>
                 <li class="glide__slide" id="slide3">
                     <div class="desc">
-                        <h1 class="titleOfProduct">Maple Sage Green Couch</h1>
-                        <h3 class="prodDesc">4-person couch in sage green. Maple Wood legs and frame</h3>
+                        <h1 class="titleOfProduct"></h1>
+                        <h3 class="prodDesc"></h3>
                     </div>
                 </li>
 
                 <li class="glide__slide" id="slide4">
                     <div class="desc">
-                        <h1 class="titleOfProduct">Maple Sage Green Couch</h1>
-                        <h3 class="prodDesc">4-person couch in sage green. Maple Wood legs and frame</h3>
+                        <h1 class="titleOfProduct"></h1>
+                        <h3 class="prodDesc"></h3>
                     </div>
                 </li>
 
