halfway done with products

--- a/frontend/public/homepage/index.html
+++ b/frontend/public/homepage/index.html
@@ -133,10 +133,10 @@
         </ul>
     </div>
 
-    <script type="module" src="main.js"></script>
+    
     <section class="catLinks">
 
-        <a href="#" class="allProd">
+        <a href="products.html?category=AllCollections" class="allProd">
 
             <img src="../img/allProduct.jpg" class="allProdImg">
             <div class="text">
@@ -148,7 +148,7 @@
             </div>
         </a>
 
-        <a href="#" class="topLeft">
+        <a href="products.html?category=Bedroom" class="topLeft category-link" data-category="Bedroom">
             <img src="../img/bedroom.jpg" class="topLeftImg">
             <div class="text">
                 <p>Bedroom Essentials</p>
@@ -159,7 +159,7 @@
             </div>
         </a>
 
-        <a href="#" class="topRight">
+        <a href="products.html?category=DiningRoom" class="topRight category-link" data-category="Dining Room">
             <img src="../img/dining.jpg" class="topRightImg">
             <div class="text">
                 <p>Spice up your Dining Room</p>
@@ -169,8 +169,8 @@
                 <h3>Shop Now</h3>
             </div>
         </a>
-
-        <a href="#" class="bottomLeft">
+ 
+        <a href="products.html?category=Outdoors" class="bottomLeft category-link" data-category="Outdoor">
             <img src="../img/outdoor.jpg" class="topRightImg">
             <div class="text">
                 <p>Embrace Nature</p>
@@ -181,7 +181,7 @@
             </div>
         </a>
 
-        <a href="#" class="bottomRight">
+        <a href="products.html?category=LivingRoom" class="bottomRight category-link" data-category="Living Room">
             <img src="../img/living.jpg" class="topRightImg">
             <div class="text">
                 <p>Relax and Unwind</p>
@@ -195,6 +195,7 @@
 
     </section>
 
+    <script type="module" src="main.js"></script>
 </body>
 
 </html>
