--- a/frontend/public/admin/manageProducts.html
+++ b/frontend/public/admin/manageProducts.html
@@ -19,6 +19,7 @@
 
     <!-- Custom styles for this template-->
     <link href="css/sb-admin-2.min.css" rel="stylesheet">
+    <link href="css/products.css" rel="stylesheet">
 
 </head>
 
@@ -167,14 +168,25 @@
                         <div class="col-lg-12 mb-4">
 
                             <!-- Project Card Example -->
-                            <div class="card shadow mb-4">
+                            <div class="card shadow ">
                                 <div class="card-header py-3">
                                     <h6 class="m-0 font-weight-bold text-secondary">Products</h6>
                                 </div>
                                 <div class="card-body">
                                     <ul class="list-unstyled">
-                                        <li>
-                                            
+                                        <li class="productListItem">
+                                            <div class="productText">
+                                                <h4>Product Name</h4>
+                                                <p>Stock</p>
+                                            </div>
+                                            <div class="buttons">
+                                                <a href="#"
+                                                    class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i
+                                                        class="fas fa-pen fa-sm text-white-50"></i> Edit</a>
+                                                <a href="#"
+                                                    class="d-none d-sm-inline-block btn btn-sm btn-danger shadow-sm"><i
+                                                        class="fas fa-minus fa-sm text-white-50"></i> Delete</a>
+                                            </div>
                                         </li>
                                     </ul>
                                 </div>
