--- a/frontend/public/homepage/index.html
+++ b/frontend/public/homepage/index.html
@@ -138,7 +138,7 @@
 
         <a href="products.html?category=AllCollections" class="allProd category-link" data-category="All Collections">
 
-            <img src="../img/allProduct.jpg" class="allProdImg">
+            <img src="../img/allProduct.jpg" class="allProdImg" loading="lazy">
             <div class="text">
                 <p>Discover All We Have To Offer</p>
                 <h1>Shop All Collections</h1>
@@ -160,7 +160,7 @@
         </a>
 
         <a href="aproducts.html?category=DiningRoom" class="topRight category-link" data-category="Dining Room">
-            <img src="../img/dining.jpg" class="topRightImg">
+            <img src="../img/dining.jpg" class="topRightImg" loading="lazy">
             <div class="text">
                 <p>Spice up your Dining Room</p>
                 <h1>Dining Room</h1>
@@ -171,7 +171,7 @@
         </a>
  
         <a href="products.html?category=Outdoors" class="bottomLeft category-link" data-category="Outdoor">
-            <img src="../img/outdoor.jpg" class="topRightImg">
+            <img src="../img/outdoor.jpg" class="topRightImg" loading="lazy">
             <div class="text">
                 <p>Embrace Nature</p>
                 <h1>Outdoors</h1>
@@ -182,7 +182,7 @@
         </a>
 
         <a href="products.html?category=LivingRoom" class="bottomRight category-link" data-category="Living Room">
-            <img src="../img/living.jpg" class="topRightImg">
+            <img src="../img/living.jpg" class="topRightImg" loading="lazy">
             <div class="text">
                 <p>Relax and Unwind</p>
                 <h1>Living Room</h1>
